feat: removendo a dependencia de Collect