@@ -8,7 +8,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 public class PecaJpaAdapter implements PecaRepositoryPort {
@@ -32,7 +31,7 @@ public class PecaJpaAdapter implements PecaRepositoryPort {
 
     @Override
     public List<Peca> listarPecas() {
-        return repository.findAll().stream().map(mapper::toDomain).collect(Collectors.toList());
+        return repository.findAll().stream().map(mapper::toDomain).toList();
     }
 
     @Override
